Show Restricted Area Video, improve other codes

--- a/base/templates/safety_result.html
+++ b/base/templates/safety_result.html
@@ -117,13 +117,13 @@
 <body>
     <h1>Safety Result</h1>
     <p>Video Name: {{ video_name }}</p>
-    <p>Safety Percentage: {{ safety_percentage }}%</p>
-    <p>Unsafety Percentage: {{ unsafety_percentage }}%</p>
+    <!-- <p>Safety Percentage: {{ safety_percentage }}%</p>
+    <p>Unsafety Percentage: {{ unsafety_percentage }}%</p> -->
     
     <div class="result-container">
         <!-- Chart section -->
         <div class="chart">
-            <canvas id="percentageChart" width="300" height="150"></canvas>
+            <canvas id="percentageChart" width="500" height="250"></canvas>
         </div>
 
         <!-- Video section -->
