login and register added

--- a/base/templates/register.html
+++ b/base/templates/register.html
@@ -6,7 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Login</title>
+    <title>Register</title>
 
     <style media="screen">
       *,
@@ -113,8 +113,8 @@
       <div class="shape"></div>
       <div class="shape"></div>
     </div>
-    <form action="login" method="post">
-      <h3>Login Here</h3>
+    <form action="register" method="post">
+      <h3>Register Here</h3>
 
       <label for="username">Username</label>
       <input
@@ -132,8 +132,8 @@
         id="password"
       />
 
-      <button>Log In</button>
-      <p>Don't have an account? <a href="register">Register now</a></p>
+      <button>Register</button>
+      <p>Already have an account? <a href="login">Login now</a></p>
     </form>
   </body>
 </html>
