--- a/base/static/css/global.css
+++ b/base/static/css/global.css
@@ -12,3 +12,59 @@ body {
     font-family: "Poppins", sans-serif;
     background-color: #080710;
 }
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+    font-size: 18px;
+    text-align: center;
+    color: #080710;
+    background-color: white;
+}
+
+.navbar>.link {
+    display: flex;
+    align-items: center;
+}
+
+.navbar>.link>a {
+    display: inline-block;
+    color: #080710 !important;
+    margin: 0 10px;
+}
+
+.navbar>.user {
+    display: flex;
+    align-items: center;
+}
+
+.navbar>.user>.logout {
+    margin-left: 10px;
+    padding: 8px 15px;
+    background-color: #080710;
+    border-radius: 10px;
+    text-decoration: none !important;
+}
+
+.content {
+    min-height: 100vh;
+}
+
+.footer {
+    padding: 20px;
+    font-size: 18px;
+    text-align: center;
+    color: #080710;
+    background-color: white;
+}
