--- a/base/templates/dashboard.html
+++ b/base/templates/dashboard.html
@@ -1,107 +1,31 @@
-<!-- main_page.html -->
-{% extends 'base_layout.html' %}
-
-{% block custom_content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
-    <title>Dashboard</title>
-    <style>
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-top: 10px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #604caf; /* Green color */
-            color: #fff; /* White text color */
-            border: 1px solid #604caf; /* Green border */
-            border-radius: 5px; /* Rounded corners */
-            transition: background-color 0.3s;
-        }
-
-            .button:hover {
-            background-color: #9580e8; /* Darker green color on hover */
-            }
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        h1 {
-            color: #333;
-            margin-top: 50px;
-            font-size: 36px;
-        }
-
-        h2 {
-            color: #555;
-            font-size: 24px;
-        }
-
-        .dropdown {
-            display: inline-block;
-        }
-
-        .dropbtn {
-            background-color: #4caf50;
-            color: white;
-            padding: 12px;
-            font-size: 16px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-            z-index: 1;
-        }
-
-        .dropdown-content a {
-            color: #333;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            cursor: pointer;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #f1f1f1;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown:hover .dropbtn {
-            background-color: #45a049;
-        }
-    </style>
-</head>
-<body>
-    <h1>Dashboard</h1>
-    <h2>Choose an option:</h2>
-    <div class="dropdown">
-        <button class="dropbtn">Choose an option</button>
-        <div class="dropdown-content">
-            <a href="safety-detection">Safety Detection</a>
-            <a href="restricted-area-detection">Restricted Area Detection</a>
-        </div>
+{% extends 'base_layout.html' %} {% block content %}
+<style>
+  @import url("static/css/home.css");
+</style>
+<div class="home">
+  <div>
+    <p>Restricted Area Detection</p>
+    <div class="video-bg">
+      <video
+        class="home-video"
+        src="static/video/restricted_area.mp4"
+        autoplay
+        muted
+        loop
+      />
     </div>
-    <a class="button" href="logout" >Logout</a>
-</body>
-</html>
+  </div>
+  <div>
+    <p>Safety Equipments Detection</p>
+    <div class="video-bg">
+      <video
+        class="home-video"
+        src="static/video/restricted_area.mp4"
+        autoplay
+        muted
+        loop
+      />
+    </div>
+  </div>
+</div>
 {% endblock %}
