--- a/base/templates/base_layout.html
+++ b/base/templates/base_layout.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <div>
-        <img src="" alt="Logo" />
-      </div>
+      <img src="static/images/logo2.png" alt="Logo" />
       <div class="link">
         <a href="dashboard">Home</a>
         <a href="safety-detection">Safety Detection</a>
