--- a/base/static/css/global.css
+++ b/base/static/css/global.css
@@ -26,7 +26,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 40px;
+    padding: 10px 40px;
     font-size: 18px;
     text-align: center;
     color: #080710;
@@ -42,6 +42,10 @@ a:hover {
     display: inline-block;
     color: #080710 !important;
     margin: 0 10px;
+}
+
+.navbar img{
+    width: 200px;
 }
 
 .navbar>.user {
