--- a/base/templates/safety_detection/index.html
+++ b/base/templates/safety_detection/index.html
@@ -4,11 +4,18 @@
 </style>
 
 <div class="safety-container">
-  <form action="safety-detection" method="post">
+  <form action="safety-detection" method="post" enctype="multipart/form-data">
     <h3>Safety Detection</h3>
 
     <label for="video">Upload Video: </label>
-    <input type="file" name="video" placeholder="Upload video" id="video" />
+    <input
+      type="file"
+      name="video"
+      placeholder="Upload video"
+      id="video"
+      required
+      accept="video/*"
+    />
 
     <button>Submit</button>
   </form>
