--- a/base/static/css/restricted_area_result.css
+++ b/base/static/css/restricted_area_result.css
@@ -1,22 +1,49 @@
-@import url("static/css/global.css");
+@import url("global.css");
 
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   color: white;
   gap: 20px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 3rem;
 }
 
 .container > div {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 3rem;
   justify-content: center;
+  justify-items: center;
+  width: 80%;
+}
+
+.container-2 {
+  background-color: rgba(255, 255, 255, 0.13);
+  border-radius: 10px;
+  backdrop-filter: blur(50px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 35px;
+  height: fit-content;
+}
+
+.container-2 h1 {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.container-2 p {
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: lightgray;
 }
 
 video {
   width: 100%;
   max-width: 600px;
   height: auto;
+  border-radius: 10px;
 }
