--- a/base/templates/dashboard.html
+++ b/base/templates/dashboard.html
@@ -12,6 +12,7 @@
         src="static/video/safety_equipment.mp4"
         autoplay
         muted
+        loop
       />
     </div>
   </div>
@@ -24,6 +25,7 @@
         src="static/video/restricted_area.mp4"
         autoplay
         muted
+        loop
       />
     </div>
   </div>
