--- a/base/templates/user/register.html
+++ b/base/templates/user/register.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
     <title>Register</title>
     <style media="screen">
       @import url("static/css/global.css");
