loader for restricted area

--- a/base/static/css/restricted_area_detection.css
+++ b/base/static/css/restricted_area_detection.css
@@ -1,72 +1,72 @@
-@import url('global.css');
+@import url("global.css");
 
 .restricted-area-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 2.5rem;
 }
 
-.restricted-area-container form {
-    width: 400px;
-    background-color: rgba(255, 255, 255, 0.13);
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-    padding: 50px 35px;
+.restricted-area-container div {
+  width: 400px;
+  background-color: rgba(255, 255, 255, 0.13);
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  padding: 50px 35px;
 }
 
-.restricted-area-container form * {
-    font-family: "Poppins", sans-serif;
-    color: #ffffff;
-    letter-spacing: 0.5px;
-    outline: none;
-    border: none;
+.restricted-area-container div * {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
 }
 
-.restricted-area-container form h3 {
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
-    text-align: center;
+.restricted-area-container div h3 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
 }
 
 .restricted-area-container label {
-    display: block;
-    margin-top: 25px;
-    font-size: 16px;
-    font-weight: 500;
+  display: block;
+  margin-top: 25px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
-.restricted-area-container input[type='file'] {
-    display: block;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
-    border-radius: 3px;
-    margin-top: 8px;
-    font-size: 14px;
-    font-weight: 300;
+.restricted-area-container input[type="file"] {
+  display: block;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 3px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
 }
 
-.restricted-area-container input[type='file']::file-selector-button {
-    height: 50px;
-    margin-right: 10px;
-    font-family: 'Poppins';
+.restricted-area-container input[type="file"]::file-selector-button {
+  height: 50px;
+  margin-right: 10px;
+  font-family: "Poppins";
 }
 
 ::placeholder {
-    color: #e5e5e5;
+  color: #e5e5e5;
 }
 
 .restricted-area-container button {
-    margin-top: 25px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #080710;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    cursor: pointer;
+  margin-top: 25px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
 }
