login table and flow update

--- a/base/templates/base_layout.html
+++ b/base/templates/base_layout.html
@@ -17,7 +17,7 @@
         <a href="restricted-area-detection">Restricted Area Detection</a>
       </div>
       <div class="user">
-        <p>Welcome <b>{{user.username.capitalize()}}</b></p>
+        <p>Welcome <b>{{user.login_username.capitalize()}}</b></p>
         <a class="logout" href="logout">Logout</a>
       </div>
     </nav>
