--- a/base/templates/safety_detection/result.html
+++ b/base/templates/safety_detection/result.html
@@ -12,8 +12,12 @@
     <div class="container-2">
       <h1>Safety Detection Result</h1>
       <p>Video Name: <b>{{ video_name }}</b></p>
-      <span hidden id="safety_percentage">{{safety_percentage}}</span>
-      <span hidden id="unsafety_percentage">{{unsafety_percentage}}</span>
+      <span hidden id="safety_percentage"
+        >{{result_percentage.get('safety')}}</span
+      >
+      <span hidden id="unsafety_percentage"
+        >{{result_percentage.get('unsafety')}}</span
+      >
       <div id="myChart"></div>
     </div>
   </div>
