--- a/base/static/css/safety_detection_result.css
+++ b/base/static/css/safety_detection_result.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 2.5rem;
-  color: white;
+  color: #080710;
   text-align: center;
 }
 
@@ -43,7 +43,7 @@
   border-radius: 10px;
   backdrop-filter: blur(50px);
   border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  box-shadow: 0 0 10px rgba(8, 7, 16, 0.6);
   padding: 35px;
   height: fit-content;
 }
@@ -56,7 +56,7 @@
 .container-2 p {
   font-size: 20px;
   margin-bottom: 10px;
-  color: lightgray;
+  color: gray;
 }
 
 video {
