--- a/base/static/css/define_area.css
+++ b/base/static/css/define_area.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #ffffff;
+  color: #080710;
 }
 
 .canvas-container h1 {
@@ -16,11 +16,11 @@
 
 .canvas-container p {
   margin-bottom: 10px;
-  color: lightgrey;
+  color: gray;
 }
 
 #restrictedAreaCanvas {
-  border: 1px solid #ddd;
+  border: 1px solid #080710;
   /* margin-top: 10px; */
   margin-top: 10px;
   display: block;
@@ -28,8 +28,8 @@
 #submitCoordinates {
   margin-top: 18px;
   width: 15%;
-  background-color: #ffffff;
-  color: #080710;
+  color: #ffffff;
+  background-color: #080710;
   padding: 15px 0;
   font-size: 18px;
   font-weight: 600;
