--- a/base/static/css/global.css
+++ b/base/static/css/global.css
@@ -10,7 +10,8 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #080710;
+  background-color: white;
+  /* background-color: #080710; */
 }
 
 a {
@@ -29,8 +30,8 @@ a:hover {
   padding: 10px 40px;
   font-size: 18px;
   text-align: center;
-  color: #080710;
-  background-color: white;
+  color: white;
+  background-color: #080710;
 }
 
 .navbar > .link {
@@ -40,7 +41,7 @@ a:hover {
 
 .navbar > .link > a {
   display: inline-block;
-  color: #080710 !important;
+  color: white !important;
   margin: 0 10px;
 }
 
@@ -56,7 +57,8 @@ a:hover {
 .navbar > .user > .logout {
   margin-left: 10px;
   padding: 8px 15px;
-  background-color: #080710;
+  color: #080710;
+  background-color: white;
   border-radius: 10px;
   text-decoration: none !important;
 }
@@ -69,8 +71,8 @@ a:hover {
   padding: 20px;
   font-size: 18px;
   text-align: center;
-  color: #080710;
-  background-color: white;
+  color: white;
+  background-color: #080710;
 }
 
 #preloader {
