--- a/base/static/css/safety_detection.css
+++ b/base/static/css/safety_detection.css
@@ -13,13 +13,13 @@
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    box-shadow: 0 0 10px rgba(8, 7, 16, 0.6);
     padding: 50px 35px;
 }
 
 .safety-container div * {
     font-family: "Poppins", sans-serif;
-    color: #ffffff;
+    color: #080710;
     letter-spacing: 0.5px;
     outline: none;
     border: none;
@@ -42,7 +42,7 @@
 .safety-container input[type='file'] {
     display: block;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.07);
+    background-color: rgba(26, 26, 26, 0.07);
     border-radius: 3px;
     margin-top: 8px;
     font-size: 14px;
@@ -56,14 +56,14 @@
 }
 
 ::placeholder {
-    color: #e5e5e5;
+    color: #080710;
 }
 
 .safety-container button {
     margin-top: 25px;
     width: 100%;
-    background-color: #ffffff;
-    color: #080710;
+    color: #ffffff;
+    background-color: #080710;
     padding: 15px 0;
     font-size: 18px;
     font-weight: 600;
