--- a/base/templates/user/login.html
+++ b/base/templates/user/login.html
@@ -46,7 +46,7 @@
       }
       form * {
         font-family: "Poppins", sans-serif;
-        color: #ffffff;
+        color: #080710;
         letter-spacing: 0.5px;
         outline: none;
         border: none;
@@ -68,7 +68,7 @@
         display: block;
         height: 50px;
         width: 100%;
-        background-color: rgba(255, 255, 255, 0.07);
+        background-color: rgba(26, 26, 26, 0.07);
         border-radius: 3px;
         padding: 0 10px;
         margin-top: 8px;
@@ -76,22 +76,18 @@
         font-weight: 300;
       }
       ::placeholder {
-        color: #e5e5e5;
+        color: #080710;
       }
       button {
         margin-top: 25px;
         width: 100%;
-        background-color: #ffffff;
-        color: #080710;
+        color: #ffffff;
+        background-color: #080710;
         padding: 15px 0;
         font-size: 18px;
         font-weight: 600;
         border-radius: 5px;
         cursor: pointer;
-      }
-      p {
-        margin-top: 10px;
-        font-weight: 500;
       }
     </style>
   </head>
@@ -102,7 +98,7 @@
       <div class="shape"></div>
     </div>
     <form action="login" method="post">
-      <h3>Login Here</h3>
+      <h3>Safety Hazzard Detection</h3>
 
       <label for="username">Username</label>
       <input type="text" name="username" placeholder="Username" id="username" />
