--- a/base/templates/user/view_detection.html
+++ b/base/templates/user/view_detection.html
@@ -24,7 +24,7 @@
       <td>{{i['output_file_path']}}</td>
       <td>{{i['detection_type']}}</td>
       <td>{{i['detection_source']}}</td>
-      <td class="view">View</td>
+      <td class="view" data="{{i['detection_stats']}}">View</td>
       <td>
         <a class="viewDetectionDelete" data="{{i['detection_id']}}">Delete</a>
       </td>
@@ -33,5 +33,36 @@
     {% endfor %}
   </tbody>
 </table>
+
+<div class="popup-container" id="popup-container">
+  <div class="popup" id="popup">
+    <div class="popup-title" id="popup-title">
+      <p id="popup-heading"></p>
+      <p class="popup-title-cross" onclick="closePopup()">&#10006;</p>
+    </div>
+    <p class="popup-data" id="popup-data">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis neque aut
+      assumenda architecto blanditiis quisquam itaque vero excepturi, nesciunt
+      sequi similique voluptatibus. Eos, tenetur quasi! Autem natus quia dolore
+      totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+      qui doloribus rerum temporibus ipsa harum repudiandae recusandae, illo
+      iure sunt nulla eligendi voluptatem. Dolor, nulla provident deserunt ipsum
+      recusandae commodi. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Quisquam qui doloribus rerum temporibus ipsa harum repudiandae
+      recusandae, illo iure sunt nulla eligendi voluptatem. Dolor, nulla
+      provident deserunt ipsum recusandae commodi. Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Quisquam qui doloribus rerum temporibus ipsa
+      harum repudiandae recusandae, illo iure sunt nulla eligendi voluptatem.
+      Dolor, nulla provident deserunt ipsum recusandae commodi. Lorem ipsum
+      dolor sit amet consectetur adipisicing elit. Quisquam qui doloribus rerum
+      temporibus ipsa harum repudiandae recusandae, illo iure sunt nulla
+      eligendi voluptatem. Dolor, nulla provident deserunt ipsum recusandae
+      commodi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+      qui doloribus rerum temporibus ipsa harum repudiandae recusandae, illo
+      iure sunt nulla eligendi voluptatem. Dolor, nulla provident deserunt ipsum
+      recusandae commodi.
+    </p>
+  </div>
+</div>
 
 {% endblock %}
