--- a/base/static/css/view_detection.css
+++ b/base/static/css/view_detection.css
@@ -76,6 +76,47 @@
     cursor: pointer;
 }
 
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 100vh;
+    width: 100%;
+    background: rgb(187, 187, 187, 0.8) no-repeat center center;
+}
+
+.popup {
+    height: 400px;
+    width: 700px;
+    overflow-y: scroll;
+    border-radius: 10px;
+    background-color: white;
+}
+
+.popup::-webkit-scrollbar {
+    display: none;
+}
+
+.popup-title {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    font-size: 22px;
+    font-weight: 600;
+    color: white;
+    background-color: #428bca;
+}
+
+.popup-title-cross {
+    cursor: pointer;
+}
+
+.popup-data {
+    padding: 20px;
+}
+
 @media screen and (max-width: 601px) {
     .rwd-table tr:nth-child(2) {
         border-top: none;
