--- a/base/templates/base_layout.html
+++ b/base/templates/base_layout.html
@@ -10,7 +10,7 @@
   <body>
     <div id="preloader"></div>
     <nav class="navbar">
-      <img src="static/images/logo3.png" alt="Logo" />
+      <img src="static/images/logo.png" alt="Logo" />
       <div class="link">
         <a href="dashboard">Home</a>
         <a href="safety-detection">Safety Detection</a>
