--- a/base/templates/about.html
+++ b/base/templates/about.html
@@ -7,56 +7,84 @@
 <main class="container">
   <div class="about-section">
     <div class="inside-about-content">
-      <h1>Welcome to [Your Project Name]</h1>
+      <div class="about-img">
+        <img
+          src="static/images/project-about2.png"
+          alt="project about img"
+          width="700"
+          height="700"
+        />
+      </div>
+      <div class="about-text">
+        <h1>Welcome to Safety Hazzard Detection</h1>
+      </div>
+    </div>
+    <div class="functionalities">
+      <h2>Our Services</h2>
+      <div class="func">
 
-      <p>
-        The safety of workers in the oil industry is of paramount importance.
-        Accidents can have severe consequences, including injury, loss of life,
-        and environmental damage. To mitigate risks, this project aims to
-        develop a computer vision-based system for safety measurement in the oil
-        industry. The system will detect and monitor the usage of safety
-        equipment such as vests and hard hats, as well as identify restricted
-        areas in real-time.The safety of workers in the oil industry is of
-        paramount importance. Accidents can have severe consequences, including
-        injury, loss of life, and environmental damage. To mitigate risks, this
-        project aims to develop a computer svision-based system for safety
-        measurement in the oil industry. The system will detect and monitor the
-        usage of safety equipment such as vests and hard hats, as well as
-        identify restricted areas in real-time.
-      </p>
-
-      <h2>Functionalities</h2>
-
-      <ul>
-        <li>
-          <h3>Safety Detection</h3>
+        <div class="func-text">
+          
           <ul>
-            <li>Analysis of safety gear including helmets and vests.</li>
-            <li>Utilizes advanced computer vision and AI algorithms.</li>
+  
             <li>
-              Ensures compliance with safety protocols by identifying personnel
-              wearing proper safety equipment.
+              <h3>Safety Detection</h3>
+              <ul>
+                <div class="func-subtext">
+  
+                  <li>Analysis of safety gear including helmets and vests.</li>
+                  <li>Utilizes advanced computer vision and AI algorithms.</li>
+                  <li>
+                    Ensures compliance with safety protocols by identifying personnel
+                    wearing proper safety equipment.
+                  </li>
+  
+                </div>
+  
+              </ul>
             </li>
           </ul>
-        </li>
-        <li>
-          <h3>Restricted Area Detection</h3>
+        </div>
+        <div class="func-img">
+          <img src="static/images/safety-vectorimg.jpg" alt="restricted-about.png" width=400 height=400>
+        </div>
+      </div>
+      <div class="func">
+
+        <div class="func-img">
+          <img src="static/images/restricted-about.png" alt="restricted-about.png" width=400 height=400>
+        </div>
+  
+        <div class="func-text">
           <ul>
             <li>
-              Accurate detection and tracking of personnel entering restricted
-              zones.
+
+                <h3>
+
+                Restricted Area Detection
+              </h3>
+              <div class="func-subtext">
+
+                <ul>
+                  <li>
+                  Accurate detection and tracking of personnel entering restricted
+                  zones.
+                </li>
+                <li>
+                  Enhances security and access control, allowing only authorized
+                  personnel in critical areas.
+                </li>
+                <li>
+                  Automatic counting and logging of personnel entering into the
+                  restricted area.
+                </li>
+              </ul>
+            </div>
             </li>
-            <li>
-              Enhances security and access control, allowing only authorized
-              personnel in critical areas.
-            </li>
-            <li>
-              Automatic counting and logging of personnel entering into the
-              restricted area.
-            </li>
-          </ul>
-        </li>
-      </ul>
+            </ul>
+        </div>
+      </div>
+
     </div>
   </div>
 </main>
