--- a/base/static/css/about.css
+++ b/base/static/css/about.css
@@ -1,6 +1,8 @@
 .container {
-    max-width: 1370px;
+    max-width: 1570px;
     margin: 0 auto;
+    padding: 16px;
+
 }
 
 .card {
@@ -9,32 +11,52 @@
 }
 
 .about-section {
-    padding: 50px;
+    padding:  0 50px;
     text-align: center;
-    background-color: #ced3dc;
-    color: black;
-    border: 1px solid gray;
+    /* background-color: rgb(236, 230, 230); */
+    color: rgb(79, 78, 78);
 
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     /* Sans-serif fallback */
     /* font-family: 'Georgia', serif; */
     font-size: 20px;
 }
 
-.inside-about-content h1 {
-    text-align: center;
+.about-text{
+    max-width: 50%;
+    padding: 170px 10px;
+    padding-left: 110px;
+    font-size: 30px;
+}
+.about-img,.func-img{
+    max-width: 50%;
 }
 
 .inside-about-content {
-    /* max-width: 1200px */
+    /* max-width: 1000px; */
+    display: flex;
+    /* flex-direction: row; */
     text-align: left;
     line-height: 1.8;
 }
 
-.container {
-    padding: 0 16px;
+.func{
+        padding:50px;
+    display: flex;
+    justify-content: space-evenly
 }
 
+.func-text{
+    max-width: 50%;
+    padding: 50px;
+}
+
+ul li{
+    text-align: left;
+}
+.func-subtext {
+    padding: 14px 20px;
+}
 li {
     margin-bottom: 25px;
 }
