--- a/base/templates/base_layout.html
+++ b/base/templates/base_layout.html
@@ -13,8 +13,10 @@
       <img src="static/images/logo.png" alt="Logo" />
       <div class="link">
         <a href="dashboard">Home</a>
+        <a href="view-detection">View</a>
         <a href="safety-detection">Safety Detection</a>
         <a href="restricted-area-detection">Restricted Area Detection</a>
+        <a href="about">About</a>
       </div>
       <div class="user">
         <p>Welcome <b>{{user.login_username.capitalize()}}</b></p>
