--- a/base/static/css/home.css
+++ b/base/static/css/home.css
@@ -14,7 +14,7 @@
 .home p {
     margin-bottom: 10px;
     font-size: 20px;
-    color: #080710;
+    color: rgb(79, 78, 78);
     text-align: center;
 }
 
