--- a/base/templates/user/login.html
+++ b/base/templates/user/login.html
@@ -46,7 +46,7 @@
       }
       form * {
         font-family: "Poppins", sans-serif;
-        color: #080710;
+        color: rgb(79, 78, 78);
         letter-spacing: 0.5px;
         outline: none;
         border: none;
@@ -82,7 +82,7 @@
         margin-top: 25px;
         width: 100%;
         color: #ffffff;
-        background-color: #080710;
+        background-color: rgb(79, 78, 78);
         padding: 15px 0;
         font-size: 18px;
         font-weight: 600;
