--- a/base/static/css/safety_detection.css
+++ b/base/static/css/safety_detection.css
@@ -63,7 +63,7 @@
     margin-top: 25px;
     width: 100%;
     color: #ffffff;
-    background-color: #080710;
+    background-color: rgb(79, 78, 78);
     padding: 15px 0;
     font-size: 18px;
     font-weight: 600;
