--- a/base/static/css/safety_detection_result.css
+++ b/base/static/css/safety_detection_result.css
@@ -38,6 +38,11 @@
   margin-top: 10px;
 }
 
+.chart-container {
+  display: flex;
+  align-items: center;
+}
+
 .container-2 {
   background-color: rgba(255, 255, 255, 0.13);
   border-radius: 10px;
